[project]
name = "andreas-isaksson"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "celery>=6.0,<7.0",
    "httpx>=0.27,<0.28",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "psycopg-binary>=3.1",
    "pgvector>=0.2.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]


[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
