[tool.poetry]
name = "andreas-isaksson"
version = "0.1.0"
description = ""
authors = ["Codex <codex@openai.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120"
uvicorn = "^0.29"
celery = "^6.0"
redis = "^5.0"
httpx = "^0.27"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pgvector = "^0.2"
python-dotenv = "^1.0"
structlog = "^24.1"
openai = "^1.14"
prometheus-client = "^0.20"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
